--- a/src/template/groups.html
+++ b/src/template/groups.html
@@ -5,18 +5,52 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>获取分组列表</title>
+        <title>分组操作</title>
     </head>
 
     <body>
 
         <center>
-            <form action="/groups" method="post">
-                {% raw xsrf_form_html() %}
-                <input type="text" name="uid" placeholder="请输入uid" /><br />
-                <input type="submit" value="查询" />
-                <input type="reset" value="重置" />
-            </form>
+            <div>
+                <span>查询分组</span><br />
+                <form action="/groups" method="post">
+                    {% raw xsrf_form_html() %}
+                    <input type="text" name="uid" placeholder="请输入uid" /><br />
+                    <input type="submit" value="查询" />
+                    <input type="reset" value="重置" />
+                </form>
+            </div>
+            <div>
+                <span>添加分组</span><br />
+                <form action="/groups/add" method="post">
+                    {% raw xsrf_form_html() %}
+                    <input type="text" name="uid" placeholder="请输入uid" /><br />
+                    <input type="text" name="name" placeholder="请输入分组" /><br />
+                    <input type="submit" value="查询" />
+                    <input type="reset" value="重置" />
+                </form>
+            </div>
+            <div>
+                <span>删除分组</span><br />
+                <form action="/groups/del" method="post">
+                    {% raw xsrf_form_html() %}
+                    <input type="text" name="uid" placeholder="请输入uid" /><br />
+                    <input type="text" name="gid" placeholder="请输入分组gid" /><br />
+                    <input type="submit" value="查询" />
+                    <input type="reset" value="重置" />
+                </form>
+            </div>
+            <div>
+                <span>修改分组名</span><br />
+                <form action="/groups/modify" method="post">
+                    {% raw xsrf_form_html() %}
+                    <input type="text" name="uid" placeholder="请输入uid" /><br />
+                    <input type="text" name="gid" placeholder="请输入分组gid" /><br />
+                    <input type="text" name="name" placeholder="请输入新的分组名" /><br />
+                    <input type="submit" value="查询" />
+                    <input type="reset" value="重置" />
+                </form>
+            </div>
         </center>
 
     </body>
